JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -409,11 +409,15 @@ Parent parent = em.find(Parent.class, parentId);
 > 복합키에는 @GenerateValue 를 사용할 수 없다. 복합키 구성하는 여러 컬럼 중 하나에도 못쓴다!
 
 ### 7.3.4 복합키 식별 관계
-* 
+* 부모 테이블의 식별키를 자식 테이블의 기본키에 포함한다.
+* 손자 테이블은 부모테이블+자식테이블의 기본키를 모두 포함한다.
+
+#### @IdClass
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjA4MTY2OTgsLTExNDk5MjExNDcsMTg3MT
-A5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2MTAx
-NTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ
-==
+eyJoaXN0b3J5IjpbLTI2Mjg1MTAxNSwtMTE0OTkyMTE0NywxOD
+cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
+MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
+19
 -->
