JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -413,11 +413,16 @@ Parent parent = em.find(Parent.class, parentId);
 * 손자 테이블은 부모테이블+자식테이블의 기본키를 모두 포함한다.
 
 #### @IdClass
-
+1. Parent
+	* `@Id @Column(name="PARENT_ID")`
+2. Child
+	* `@Id @Column(name="PARENT_ID")`
+3. GrandChild
+	* `@Id @Column(name="PARENT_ID")`
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI2Mjg1MTAxNSwtMTE0OTkyMTE0NywxOD
-cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
-MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
-19
+eyJoaXN0b3J5IjpbLTE0OTg0MzczMDEsLTExNDk5MjExNDcsMT
+g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
+MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
+BdfQ==
 -->
