--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -416,13 +416,16 @@ Parent parent = em.find(Parent.class, parentId);
 1. Parent
 	* `@Id @Column(name="PARENT_ID")`
 2. Child
-	* `@Id @Column(name="PARENT_ID")`
+	* `@IdClass(ChildId.class)`
+	* `@ManaToOne @JoinColumn(name = "PARENT_ID")`
+	* `@Id @Column(name="CHILD_ID")`
+3. ChildId 구현
 3. GrandChild
 	* `@Id @Column(name="PARENT_ID")`
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0OTg0MzczMDEsLTExNDk5MjExNDcsMT
-g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
-MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
-BdfQ==
+eyJoaXN0b3J5IjpbNTc3NDg3NTAzLC0xMTQ5OTIxMTQ3LDE4Nz
+EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
+MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
+0=
 -->
