--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -421,11 +421,15 @@ Parent parent = em.find(Parent.class, parentId);
 	* `@Id @Column(name="CHILD_ID")`
 3. ChildId 구현
 3. GrandChild
-	* `@Id @Column(name="PARENT_ID")`
-
+	* `@IdClass(GrandChildId.class)`
+	* `@ManaToOne @JoinColumns({
+		@JoinColumn(name = "PARENT_ID")
+		@JoinColumn(name = "CHILD_ID")})`
+	* `@Id @Column(name="GRANDCHILD_ID")`
+5. GrandChildId 구현
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTc3NDg3NTAzLC0xMTQ5OTIxMTQ3LDE4Nz
-EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
-MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
-0=
+eyJoaXN0b3J5IjpbLTE5ODY1MDQwMjgsLTExNDk5MjExNDcsMT
+g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
+MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
+BdfQ==
 -->
