JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -430,9 +430,16 @@ Parent parent = em.find(Parent.class, parentId);
 	* ChildId를 멤버필드로 사용.
 
 #### @EmbeddedId
+[p.264]
+1. Parent
+	* `@Id @Column(name="PARENT_ID")`
+2. Child
+3. ChildId 구현
+4. GrandChild
+5. GrandChildId 구현
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODgxNDQ2NDgwLC0xMTQ5OTIxMTQ3LDE4Nz
+eyJoaXN0b3J5IjpbNDc3NzE0MzEzLC0xMTQ5OTIxMTQ3LDE4Nz
 EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
 MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
 0=
