JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -422,7 +422,7 @@ Parent parent = em.find(Parent.class, parentId);
 3. ChildId 구현
 4. GrandChild
 	* `@IdClass(GrandChildId.class)`
-	* `@ManaToOne @JoinColumns({
+	* `@ManyToOne @JoinColumns({
 		@JoinColumn(name = "PARENT_ID")
 		@JoinColumn(name = "CHILD_ID")})`
 	* `@Id @Column(name="GRANDCHILD_ID")`
@@ -434,12 +434,14 @@ Parent parent = em.find(Parent.class, parentId);
 1. Parent
 	* `@Id @Column(name="PARENT_ID")`
 2. Child
+	* `@EmbeddedId private ChildId id;`
+	* `@MapsId("parentId") @ManyToOne @JoinColumn(name = "PARENT_ID")`
 3. ChildId 구현
 4. GrandChild
 5. GrandChildId 구현
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDc3NzE0MzEzLC0xMTQ5OTIxMTQ3LDE4Nz
+eyJoaXN0b3J5IjpbNTg1NTM3NzkzLC0xMTQ5OTIxMTQ3LDE4Nz
 EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
 MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
 0=
