JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -436,13 +436,17 @@ Parent parent = em.find(Parent.class, parentId);
 2. Child
 	* `@EmbeddedId private ChildId id;`
 	* `@MapsId("parentId") @ManyToOne @JoinColumn(name = "PARENT_ID")`
+		* ChildId.parentId 필드를 맵핑함.
 3. ChildId 구현
+	* `@Embeddable` class annotation
+	* `@Column(name = "CHILD_ID")`
+	* private String pa
 4. GrandChild
 5. GrandChildId 구현
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTg1NTM3NzkzLC0xMTQ5OTIxMTQ3LDE4Nz
-EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
-MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
-0=
+eyJoaXN0b3J5IjpbLTEzNTkwNzcxMTcsLTExNDk5MjExNDcsMT
+g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
+MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
+BdfQ==
 -->
