JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -440,13 +440,17 @@ Parent parent = em.find(Parent.class, parentId);
 3. ChildId 구현
 	* `@Embeddable` class annotation
 	* `@Column(name = "CHILD_ID")`
-	* private String pa
+	* `private String parentId;` - @MapsId로 맵핑할 이름을 지정
 4. GrandChild
+	* `@EmbeddedId private GrandChildId id;`
+	* `@MapsId("childId") @ManyToOne @JoinColumns({
+		@JoinColumn(name = "PARENT_ID")
+		@JoinColumn(name = "CHILD_ID")})`
 5. GrandChildId 구현
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNTkwNzcxMTcsLTExNDk5MjExNDcsMT
-g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
-MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
-BdfQ==
+eyJoaXN0b3J5IjpbMTcyMjMwNDIzNSwtMTE0OTkyMTE0NywxOD
+cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
+MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
+19
 -->
