JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -416,12 +416,12 @@ Parent parent = em.find(Parent.class, parentId);
 1. Parent
 	* `@Id @Column(name="PARENT_ID")`
 2. Child
-	* `@IdClass(ChildId.class)`
+	* `@IdClass(ChildId.class)` class annotation
 	* `@ManaToOne @JoinColumn(name = "PARENT_ID")`
 	* `@Id @Column(name="CHILD_ID")`
 3. ChildId 구현
 4. GrandChild
-	* `@IdClass(GrandChildId.class)`
+	* `@IdClass(GrandChildId.class)` class annotation
 	* `@ManyToOne @JoinColumns({
 		@JoinColumn(name = "PARENT_ID")
 		@JoinColumn(name = "CHILD_ID")})`
@@ -447,9 +447,13 @@ Parent parent = em.find(Parent.class, parentId);
 		@JoinColumn(name = "PARENT_ID")
 		@JoinColumn(name = "CHILD_ID")})`
 5. GrandChildId 구현
+	* `@Embeddable` class annotation
+	* `@Column(name = "GRANDCHILD_ID")`
+	* `private ChildId childId;` - @MapsId로 맵핑할 이름을 지정
 
+* @MapsId() -> 외래키와 매핑한 연관관계
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcyMjMwNDIzNSwtMTE0OTkyMTE0NywxOD
+eyJoaXN0b3J5IjpbMTgyODIxNDMxNywtMTE0OTkyMTE0NywxOD
 cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
 MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
 19
