JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -451,9 +451,10 @@ Parent parent = em.find(Parent.class, parentId);
 	* `@Column(name = "GRANDCHILD_ID")`
 	* `private ChildId childId;` - @MapsId로 맵핑할 이름을 지정
 
-* @MapsId() -> 외래키와 매핑한 연관관계
+* @MapsId() -> 외래키와 매핑한 연관관계를 기본 키에도 매핑하겠다는 뜻.
+	* 속성 값은 식별자 클래스의 기본키 필드를 지정한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgyODIxNDMxNywtMTE0OTkyMTE0NywxOD
+eyJoaXN0b3J5IjpbLTg4NjMyNzgwMywtMTE0OTkyMTE0NywxOD
 cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
 MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
 19
