JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -453,9 +453,14 @@ Parent parent = em.find(Parent.class, parentId);
 
 * @MapsId() -> 외래키와 매핑한 연관관계를 기본 키에도 매핑하겠다는 뜻.
 	* 속성 값은 식별자 클래스의 기본키 필드를 지정한다.
+
+### 7.3.5 비식별 관계로 표현
+* 건너가자.. 머리아프다.
+* 7.3.4의 식별 관계를 비식별 관계로 바꿔보자는 거임.
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg4NjMyNzgwMywtMTE0OTkyMTE0NywxOD
-cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
-MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
-19
+eyJoaXN0b3J5IjpbLTE5NTI4MDE5OTQsLTExNDk5MjExNDcsMT
+g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
+MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
+BdfQ==
 -->
