JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -457,10 +457,11 @@ Parent parent = em.find(Parent.class, parentId);
 ### 7.3.5 비식별 관계로 표현
 * 건너가자.. 머리아프다.
 * 7.3.4의 식별 관계를 비식별 관계로 바꿔보자는 거임.
-* 
+* <u>식별키로 쓰이던 부분들(`String id`)을 모두 `@GenerateValue`를 붙인 `Long id`로 변경
+* asdf
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NTI4MDE5OTQsLTExNDk5MjExNDcsMT
-g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
-MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
-BdfQ==
+eyJoaXN0b3J5IjpbMTk5NDgyOTI4MCwtMTE0OTkyMTE0NywxOD
+cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
+MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
+19
 -->
