--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -455,12 +455,17 @@ Parent parent = em.find(Parent.class, parentId);
 	* 속성 값은 식별자 클래스의 기본키 필드를 지정한다.
 
 ### 7.3.5 비식별 관계로 표현
+[p.267]
 * 건너가자.. 머리아프다.
 * 7.3.4의 식별 관계를 비식별 관계로 바꿔보자는 거임.
 * <u>식별키로 쓰이던 부분들(`String id`)을 모두 `@GenerateValue`를 붙인 `Long id`로 변경
-* asdf
+* <u> 복합키가 없다. 모두 단일키로 구성
+	* 복합키 클래스도 구성하지 않음. (필요없음)
+	* 클래스 구조가 단순해진다.
+* 
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk5NDgyOTI4MCwtMTE0OTkyMTE0NywxOD
+eyJoaXN0b3J5IjpbMTE1NTI5NTk4NSwtMTE0OTkyMTE0NywxOD
 cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
 MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
 19
