--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -456,17 +456,20 @@ Parent parent = em.find(Parent.class, parentId);
 
 ### 7.3.5 비식별 관계로 표현
 [p.267]
-* 건너가자.. 머리아프다.
 * 7.3.4의 식별 관계를 비식별 관계로 바꿔보자는 거임.
 * <u>식별키로 쓰이던 부분들(`String id`)을 모두 `@GenerateValue`를 붙인 `Long id`로 변경
 * <u> 복합키가 없다. 모두 단일키로 구성
 	* 복합키 클래스도 구성하지 않음. (필요없음)
 	* 클래스 구조가 단순해진다.
-* 
-* 
+
+### 7.3.6 일대일 식별 관계
+* 자식 테이블의 기본키 값이 부모 테이블의 기본키만을 사용함.
+* 부모 테이블이 복합키가 아니면 자식 테이블도 복합키로 구성할 필요가 없음.
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE1NTI5NTk4NSwtMTE0OTkyMTE0NywxOD
-cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
-MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
-19
+eyJoaXN0b3J5IjpbLTQ2Mjg1NzIxLC0xMTQ5OTIxMTQ3LDE4Nz
+EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
+MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
+0=
 -->
