JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -467,9 +467,11 @@ Parent parent = em.find(Parent.class, parentId);
 * 부모 테이블이 복합키가 아니면 자식 테이블도 복합키로 구성할 필요가 없음.
 
 
+# 7.4 Joined Table
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ2Mjg1NzIxLC0xMTQ5OTIxMTQ3LDE4Nz
-EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
-MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
-0=
+eyJoaXN0b3J5IjpbLTMzNTk0MTIzNiwtMTE0OTkyMTE0NywxOD
+cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
+MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
+19
 -->
