JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -468,9 +468,12 @@ Parent parent = em.find(Parent.class, parentId);
 
 
 # 7.4 Joined Table
+* 테이블 연관관계를 설계하는 방법
+	* 조인 컬럼 사용 (외래키)
+	* 조인 테이블 사용 (테이블)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMzNTk0MTIzNiwtMTE0OTkyMTE0NywxOD
+eyJoaXN0b3J5IjpbLTQ3MTExNTY1MiwtMTE0OTkyMTE0NywxOD
 cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
 MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
 19
