--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -470,11 +470,14 @@ Parent parent = em.find(Parent.class, parentId);
 # 7.4 Joined Table
 * 테이블 연관관계를 설계하는 방법
 	* 조인 컬럼 사용 (외래키)
+		* 연관관계의 주인인 테이블에서 조인 컬럼을 추가함.
+		* 보통 Many에 속하는 녀석이다.
+		* 생성 시점이 독립적이라면 null을 허용해야 할 수 있다.
 	* 조인 테이블 사용 (테이블)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ3MTExNTY1MiwtMTE0OTkyMTE0NywxOD
-cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
-MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
-19
+eyJoaXN0b3J5IjpbNjI4NTUxNDg5LC0xMTQ5OTIxMTQ3LDE4Nz
+EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
+MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
+0=
 -->
