JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -477,11 +477,16 @@ Parent parent = em.find(Parent.class, parentId);
 			* OUTER JOIN 사용 필요.
 			* 실수로 INNER JOIN 사용 시 사물함이 없는 멤버는 조회되지 않음.
 	* 조인 테이블 사용 (테이블)
-		* 
+		* 두 테이블의 외래키를 가지고 있는 조인 테이블을 추가함
+		* 두 테이블은 상호간의 외래키 컬럼을 둘 필요가 없음.
+		* 단점
+			* 테이블 추가
+			* Join 시 조인 테이블까지 함께 join해야 함.
+*
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkxNzAwNTU1MywtMTE0OTkyMTE0NywxOD
-cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
-MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
-19
+eyJoaXN0b3J5IjpbLTE3MTcwOTc1NDYsLTExNDk5MjExNDcsMT
+g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
+MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
+BdfQ==
 -->
