JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -482,11 +482,20 @@ Parent parent = em.find(Parent.class, parentId);
 		* 단점
 			* 테이블 추가
 			* Join 시 조인 테이블까지 함께 join해야 함.
-*
+* 기본은 조인 컬럼을 쓰자. 필요 시 조인 테이블을 고려하자.
+	* 그게 언제냐고,,,
+
+### 1:1 Join Table
+
+### 1:N Join Table
+
+### N:1 Join Table
+
+### N:M Join Table
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MTcwOTc1NDYsLTExNDk5MjExNDcsMT
-g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
-MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
-BdfQ==
+eyJoaXN0b3J5IjpbMzIyNjIyNDI5LC0xMTQ5OTIxMTQ3LDE4Nz
+EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
+MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
+0=
 -->
