JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -486,7 +486,9 @@ Parent parent = em.find(Parent.class, parentId);
 	* 그게 언제냐고,,,
 
 ### 1:1 Join Table
-
+[p.274]
+* 조인 테이블의 외래키 컬럼에 각각 총 2개의 unique constraint를 추가해야 함.
+	* 
 ### 1:N Join Table
 
 ### N:1 Join Table
@@ -494,8 +496,8 @@ Parent parent = em.find(Parent.class, parentId);
 ### N:M Join Table
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzIyNjIyNDI5LC0xMTQ5OTIxMTQ3LDE4Nz
-EwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYwNjMyLC0xMjc1NjEw
-MTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3NzcsNTY1NTQ4ODEwXX
-0=
+eyJoaXN0b3J5IjpbLTE3OTA0NDA1MSwtMTE0OTkyMTE0NywxOD
+cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
+MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
+19
 -->
