--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -488,7 +488,10 @@ Parent parent = em.find(Parent.class, parentId);
 ### 1:1 Join Table
 [p.274]
 * 조인 테이블의 외래키 컬럼에 각각 총 2개의 unique constraint를 추가해야 함.
-	* 
+	* `@OneToOne`
+	* `@JoinTable(name = "PARENT_CHILD",`
+	* `joinColumns = @JoinColumn(name = "PARENT_ID"),`
+	* `inverseJoinColumns = @JoinColumn(name = "CH
 ### 1:N Join Table
 
 ### N:1 Join Table
@@ -496,7 +499,7 @@ Parent parent = em.find(Parent.class, parentId);
 ### N:M Join Table
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3OTA0NDA1MSwtMTE0OTkyMTE0NywxOD
+eyJoaXN0b3J5IjpbMTM3OTEzMDEwNSwtMTE0OTkyMTE0NywxOD
 cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
 MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
 19
