JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -490,8 +490,8 @@ Parent parent = em.find(Parent.class, parentId);
 * 조인 테이블의 외래키 컬럼에 각각 총 2개의 unique constraint를 추가해야 함.
 	* `@OneToOne`
 	* `@JoinTable(name = "PARENT_CHILD",`
-		* `joinColumns = @JoinColumn(name = "PARENT_ID"),`
-		* `inverseJoinColumns = @JoinColumn(name = "CHILD_ID"))`
+		* `joinColumns = @JoinColumn(name = "PARENT_ID"),` - 현재 Entity를 참조하는 외래키
+		* `inverseJoinColumns = @JoinColumn(name = "CHILD_ID"))` - 반대방향 Entity를 참조하는 외래키
 * @JoinTable을 쓴다.
 * 양방향 맵핑
 	* `@OneToOne(mappedBy="child")`
@@ -503,7 +503,7 @@ Parent parent = em.find(Parent.class, parentId);
 ### N:M Join Table
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNzMyOTA4NiwtMTE0OTkyMTE0NywxOD
+eyJoaXN0b3J5IjpbLTQyNzE5MTkxNCwtMTE0OTkyMTE0NywxOD
 cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
 MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
 19
