JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -488,11 +488,11 @@ Parent parent = em.find(Parent.class, parentId);
 ### 1:1 Join Table
 [p.274]
 * 조인 테이블의 외래키 컬럼에 각각 총 2개의 unique constraint를 추가해야 함.
-	* 부모 테이블ㅇ
-	* `@OneToOne`
-	* `@JoinTable(name = "PARENT_CHILD",`
-		* `joinColumns = @JoinColumn(name = "PARENT_ID"),` - 현재 Entity를 참조하는 외래키
-		* `inverseJoinColumns = @JoinColumn(name = "CHILD_ID"))` - 반대방향 Entity를 참조하는 외래키
+	* 부모 테이블이 자식 필드에,,
+		* `@OneToOne`
+		* `@JoinTable(name = "PARENT_CHILD",` - 맵핑할 조인 테이블 이름
+			* `joinColumns = @JoinColumn(name = "PARENT_ID"),` - 현재 Entity를 참조하는 외래키
+			* `inverseJoinColumns = @JoinColumn(name = "CHILD_ID"))` - 반대방향 Entity를 참조하는 외래키
 * @JoinTable을 쓴다.
 * 양방향 맵핑
 	* `@OneToOne(mappedBy="child")`
@@ -504,8 +504,8 @@ Parent parent = em.find(Parent.class, parentId);
 ### N:M Join Table
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2MDU4MDI3MjMsLTExNDk5MjExNDcsMT
-g3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2
-MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MT
-BdfQ==
+eyJoaXN0b3J5IjpbLTQ3NzkzOTIxMiwtMTE0OTkyMTE0NywxOD
+cxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2MDYzMiwtMTI3NTYx
+MDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNzc3LDU2NTU0ODgxMF
+19
 -->
