--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -503,15 +503,16 @@ Parent parent = em.find(Parent.class, parentId);
 	* `@JoinTable(name = "PARENT_CHILD",` - 맵핑할 조인 테이블 이름
 		* `joinColumns = @JoinColumn(name = "PARENT_ID"),` - 현재 Entity를 참조하는 외래키
 		* `inverseJoinColumns = @JoinColumn(name = "CHILD_ID"))` - 반대방향 Entity를 참조하는 외래키
-	* 자식 필드는 List<Child> 이다.
+	* 자식 필드는 `List<Child>` 타입이다.
 
 ### N:1 Join Table
+* 부모 테이블이 자식 필드에,,
 
 ### N:M Join Table
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDM1NTU5OTQ3LC00Nzc5MzkyMTIsLTExND
-k5MjExNDcsMTg3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2
-MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Ny
-w1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbLTE1NTYwNDcwMDUsLTQ3NzkzOTIxMiwtMT
+E0OTkyMTE0NywxODcxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2
+MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNz
+c3LDU2NTU0ODgxMF19
 -->
