JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -507,12 +507,19 @@ Parent parent = em.find(Parent.class, parentId);
 
 ### N:1 Join Table
 * 부모 테이블이 자식 필드에,,
-
+	* `@OneToMany(mappedBy="parent")`
+	* 자식 필드는 `List<Child>` 타입이다.
+* 자식 테이블이 부모 필드에,,
+	* `@ManyToOne(optional = false)`
+	* `@JoinTable(name = "PARENT_CHILD",` - 맵핑할 조인 테이블 이름
+		* `joinColumns = @JoinColumn(name = "CHILD_ID"),` - 현재 Entity를 참조하는 외래키
+		* `inverseJoinColumns = @JoinColumn(name = "PARENT_ID"))` - 반대방향 Entity를 참조하는 외래키
+?
 ### N:M Join Table
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NTYwNDcwMDUsLTQ3NzkzOTIxMiwtMT
-E0OTkyMTE0NywxODcxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2
-MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNz
-c3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbLTMyNDQzMzg4NywtNDc3OTM5MjEyLC0xMT
+Q5OTIxMTQ3LDE4NzEwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYw
+NjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3Nz
+csNTY1NTQ4ODEwXX0=
 -->
