JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -514,11 +514,15 @@ Parent parent = em.find(Parent.class, parentId);
 	* `@JoinTable(name = "PARENT_CHILD",` - 맵핑할 조인 테이블 이름
 		* `joinColumns = @JoinColumn(name = "CHILD_ID"),` - 현재 Entity를 참조하는 외래키
 		* `inverseJoinColumns = @JoinColumn(name = "PARENT_ID"))` - 반대방향 Entity를 참조하는 외래키
-?
-### N:M Join Table
 
+### N:M Join Table
+* 부모 테이블이 자식 필드에,,
+	* `@OneToOne`
+	* `@JoinTable(name = "PARENT_CHILD",` - 맵핑할 조인 테이블 이름
+		* `joinColumns = @JoinColumn(name = "PARENT_ID"),` - 현재 Entity를 참조하는 외래키
+		* `inverseJoinColumns = @JoinColumn(name = "CHILD_ID"))` - 반대방향 Entity를 참조하는 외래키
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMyNDQzMzg4NywtNDc3OTM5MjEyLC0xMT
+eyJoaXN0b3J5IjpbLTE4NDU1MTA5MSwtNDc3OTM5MjEyLC0xMT
 Q5OTIxMTQ3LDE4NzEwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYw
 NjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3Nz
 csNTY1NTQ4ODEwXX0=
