JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -493,7 +493,6 @@ Parent parent = em.find(Parent.class, parentId);
 	* `@JoinTable(name = "PARENT_CHILD",` - 맵핑할 조인 테이블 이름
 		* `joinColumns = @JoinColumn(name = "PARENT_ID"),` - 현재 Entity를 참조하는 외래키
 		* `inverseJoinColumns = @JoinColumn(name = "CHILD_ID"))` - 반대방향 Entity를 참조하는 외래키
-* @JoinTable을 쓴다.
 * 양방향 맵핑
 	* `@OneToOne(mappedBy="child")`
 
@@ -517,13 +516,16 @@ Parent parent = em.find(Parent.class, parentId);
 
 ### N:M Join Table
 * 부모 테이블이 자식 필드에,,
-	* `@OneToOne`
+	* `@ManyToMany`
 	* `@JoinTable(name = "PARENT_CHILD",` - 맵핑할 조인 테이블 이름
 		* `joinColumns = @JoinColumn(name = "PARENT_ID"),` - 현재 Entity를 참조하는 외래키
 		* `inverseJoinColumns = @JoinColumn(name = "CHILD_ID"))` - 반대방향 Entity를 참조하는 외래키
+	* 자식 필드는 `List<Child>` 타입이다.
+
+> 조인 테이블에 컬럼을 추가하면 @Jo
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4NDU1MTA5MSwtNDc3OTM5MjEyLC0xMT
-Q5OTIxMTQ3LDE4NzEwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYw
-NjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3Nz
-csNTY1NTQ4ODEwXX0=
+eyJoaXN0b3J5IjpbMzQ1Mzg3MzkwLC00Nzc5MzkyMTIsLTExND
+k5MjExNDcsMTg3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2
+MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Ny
+w1NjU1NDg4MTBdfQ==
 -->
