JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -522,10 +522,14 @@ Parent parent = em.find(Parent.class, parentId);
 		* `inverseJoinColumns = @JoinColumn(name = "CHILD_ID"))` - 반대방향 Entity를 참조하는 외래키
 	* 자식 필드는 `List<Child>` 타입이다.
 
-> 조인 테이블에 컬럼을 추가하면 @Jo
+> 조인 테이블에 컬럼을 추가하면 @JoinTable 전략을 사용하지 못한다. 새로운 Entity를 만들어서 조인 테이블과 매핑해라.
+
+# 7.5 Entity 하나에 여러 Table mapping
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzQ1Mzg3MzkwLC00Nzc5MzkyMTIsLTExND
-k5MjExNDcsMTg3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2
-MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Ny
-w1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbLTE1NTQ0MzQwNiwtNDc3OTM5MjEyLC0xMT
+Q5OTIxMTQ3LDE4NzEwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYw
+NjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3Nz
+csNTY1NTQ4ODEwXX0=
 -->
