JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -526,9 +526,11 @@ Parent parent = em.find(Parent.class, parentId);
 
 # 7.5 Entity 하나에 여러 Table mapping
 
+* 잘 사용하지는 않는다.
+* @SecondaryTable
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NTQ0MzQwNiwtNDc3OTM5MjEyLC0xMT
+eyJoaXN0b3J5IjpbLTkyNjI0NTE4MywtNDc3OTM5MjEyLC0xMT
 Q5OTIxMTQ3LDE4NzEwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYw
 NjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3Nz
 csNTY1NTQ4ODEwXX0=
