JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -528,10 +528,16 @@ Parent parent = em.find(Parent.class, parentId);
 
 * 잘 사용하지는 않는다.
 * @SecondaryTable
+```java
+@Entity
+@Table(name="BOARD")
+@SecondaryTable(name="BOARD_DETAIL", 
+  pkJoinColumns=@PrimaryKeyJoinColumn(name="BOARD_DETAIL_ID"))
+```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkyNjI0NTE4MywtNDc3OTM5MjEyLC0xMT
-Q5OTIxMTQ3LDE4NzEwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYw
-NjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3Nz
-csNTY1NTQ4ODEwXX0=
+eyJoaXN0b3J5IjpbLTE4NTg3NjE0MDcsLTQ3NzkzOTIxMiwtMT
+E0OTkyMTE0NywxODcxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2
+MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNz
+c3LDU2NTU0ODgxMF19
 -->
