JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -531,12 +531,20 @@ Parent parent = em.find(Parent.class, parentId);
 ```java
 @Entity
 @Table(name="BOARD")
-@SecondaryTable(name="BOARD_DETAIL", 
-  pkJoinColumns=@PrimaryKeyJoinColumn(name="BOARD_DETAIL_ID"))
+@SecondaryTable(name="BOARD_DETAIL", //맵피할 다른 테이블 이름
+	pkJoinColumns=@PrimaryKeyJoinColumn(name="BOARD_DETAIL_ID"))
+public class Board {
+	@Id @GenerateValue
+	@Column(name="BOARD_ID")
+	private Long id;
+	private String title;
+	@Column(table="BOARD_DETAIL")
+	private String content;
+}
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4NTg3NjE0MDcsLTQ3NzkzOTIxMiwtMT
+eyJoaXN0b3J5IjpbLTE5MjgyNDcwNjUsLTQ3NzkzOTIxMiwtMT
 E0OTkyMTE0NywxODcxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2
 MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNz
 c3LDU2NTU0ODgxMF19
