JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -531,21 +531,22 @@ Parent parent = em.find(Parent.class, parentId);
 ```java
 @Entity
 @Table(name="BOARD")
-@SecondaryTable(name="BOARD_DETAIL", //맵피할 다른 테이블 이름
+@SecondaryTable(name="BOARD_DETAIL", //맵핑할 다른 테이블 이름
+	//맵핑할 다른 테이블의 기본키 컬럼의 속성
 	pkJoinColumns=@PrimaryKeyJoinColumn(name="BOARD_DETAIL_ID"))
 public class Board {
 	@Id @GenerateValue
 	@Column(name="BOARD_ID")
 	private Long id;
 	private String title;
-	@Column(table="BOARD_DETAIL")
+	@Column(table="BOARD_DETAIL") //BOARD_DETAIL 테이블에만 컬럼 맵핑을 함.
 	private String content;
 }
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MjgyNDcwNjUsLTQ3NzkzOTIxMiwtMT
-E0OTkyMTE0NywxODcxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2
-MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNz
-c3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbLTM0MDk3NTMwNiwtNDc3OTM5MjEyLC0xMT
+Q5OTIxMTQ3LDE4NzEwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYw
+NjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3Nz
+csNTY1NTQ4ODEwXX0=
 -->
