JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -538,14 +538,20 @@ public class Board {
 	@Id @GenerateValue
 	@Column(name="BOARD_ID")
 	private Long id;
-	private String title;
-	@Column(table="BOARD_DETAIL") //BOARD_DETAIL 테이블에만 컬럼 맵핑을 함.
+	private String title; //기본값으로 BOARD 테이블에만 컬럼이 맵핑됨.
+	@Column(table="BOARD_DETAIL") //BOARD_DETAIL 테이블에만 컬럼이 맵핑됨.
 	private String content;
 }
+
+//더 많이?
+@SecondaryTables({
+	@SecondaryTable(name="BOARD_DETAIL"),
+	@SecondaryTable(name="BOARD_DETAIL")
+	})
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM0MDk3NTMwNiwtNDc3OTM5MjEyLC0xMT
+eyJoaXN0b3J5IjpbLTE0NTUzNjA1NywtNDc3OTM5MjEyLC0xMT
 Q5OTIxMTQ3LDE4NzEwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYw
 NjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3Nz
 csNTY1NTQ4ODEwXX0=
