--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -547,11 +547,17 @@ public class Board {
 @SecondaryTables({
 	@SecondaryTable(name="BOARD_DETAIL"),
 	@SecondaryTable(name="BOARD_DETAIL")
-	})
+})
 ```
+* 이거 쓰는거보다 두 테이블에 각각의 Entity를 만들어서 1:1 맵핑하는 것을 권장함.
+* 이 방법은 항상 두 테이블을 조회하므로 최적화 하기 어렵다.
 
+# 7.6 정리
+
+1. 객체 상속 관계를 DB에 맵핑하는 방법 학습.
+2. 매핑 정보만 상속하는 @MappedSuperClass
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NTUzNjA1NywtNDc3OTM5MjEyLC0xMT
+eyJoaXN0b3J5IjpbMTA5NjAxODIwMywtNDc3OTM5MjEyLC0xMT
 Q5OTIxMTQ3LDE4NzEwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYw
 NjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3Nz
 csNTY1NTQ4ODEwXX0=
