JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -556,8 +556,17 @@ public class Board {
 
 1. 객체 상속 관계를 DB에 맵핑하는 방법 학습.
 2. 매핑 정보만 상속하는 @MappedSuperClass
+3. 복합키 매핑
+4. 식별 관계, 비식별 관계 -> 비식별 관계를 사용하자!
+5. 조인 테이블, 조인 컬럼
+6. Entity 하나에 여러 테이블을 맵핑하는 방법
+
+# 7.8 Todo
+
+1. 객체 그래프를 자유롭게 탐색하자.
+2. 지연로딩
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA5NjAxODIwMywtNDc3OTM5MjEyLC0xMT
+eyJoaXN0b3J5IjpbLTc0Mjg3MzU3MCwtNDc3OTM5MjEyLC0xMT
 Q5OTIxMTQ3LDE4NzEwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYw
 NjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3Nz
 csNTY1NTQ4ODEwXX0=
