--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -565,9 +565,15 @@ public class Board {
 
 1. 객체 그래프를 자유롭게 탐색하자.
 2. 지연로딩
+3. 프록시
+4. 이 장에서 배운 객체 연관관계를 더 편리하게 관리하는 방법
+
+# 7.9 실전 예제
+
+음.. 이거 처음부터 만들어봤어야 하나?
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc0Mjg3MzU3MCwtNDc3OTM5MjEyLC0xMT
-Q5OTIxMTQ3LDE4NzEwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYw
-NjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3Nz
-csNTY1NTQ4ODEwXX0=
+eyJoaXN0b3J5IjpbNDkwNzgxMTU4LC00Nzc5MzkyMTIsLTExND
+k5MjExNDcsMTg3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2
+MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Ny
+w1NjU1NDg4MTBdfQ==
 -->
