JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -561,19 +561,19 @@ public class Board {
 5. 조인 테이블, 조인 컬럼
 6. Entity 하나에 여러 테이블을 맵핑하는 방법
 
-# 7.8 Todo
+# 7.7 Todo
 
 1. 객체 그래프를 자유롭게 탐색하자.
 2. 지연로딩
 3. 프록시
 4. 이 장에서 배운 객체 연관관계를 더 편리하게 관리하는 방법
 
-# 7.9 실전 예제
+# 7.8 실전 예제
 
 음.. 이거 처음부터 만들어봤어야 하나?
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDkwNzgxMTU4LC00Nzc5MzkyMTIsLTExND
-k5MjExNDcsMTg3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2
-MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Ny
-w1NjU1NDg4MTBdfQ==
+eyJoaXN0b3J5IjpbLTkxMjc5MTE2MiwtNDc3OTM5MjEyLC0xMT
+Q5OTIxMTQ3LDE4NzEwOTM3MTAsNzQxMDQ2MjA2LC0xMjQzMTYw
+NjMyLC0xMjc1NjEwMTU1LC0xNDYxMTMyNTc4LC05MDgxMDM3Nz
+csNTY1NTQ4ODEwXX0=
 -->
