JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -1,9 +1,7 @@
 # 7. 고급 매핑 개요
 
-```
 * TOC
 {:toc}
-```
 
 * 상속관계 맵핑
 	* 객체의 상속 관계를 DB에서 어떻게 매핑할지?
@@ -577,8 +575,8 @@ public class Board {
 
 음.. 이거 처음부터 만들어봤어야 하나?
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNDg1OTYwOTAsLTQ3NzkzOTIxMiwtMT
-E0OTkyMTE0NywxODcxMDkzNzEwLDc0MTA0NjIwNiwtMTI0MzE2
-MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OCwtOTA4MTAzNz
-c3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbNTYyNzQ5MTQyLC00Nzc5MzkyMTIsLTExND
+k5MjExNDcsMTg3MTA5MzcxMCw3NDEwNDYyMDYsLTEyNDMxNjA2
+MzIsLTEyNzU2MTAxNTUsLTE0NjExMzI1NzgsLTkwODEwMzc3Ny
+w1NjU1NDg4MTBdfQ==
 -->
