JPA/7.advancedMapping.md updated from https://stackedit.io/

--- a/JPA/7.advancedMapping.md
+++ b/JPA/7.advancedMapping.md
@@ -3,6 +3,11 @@
 * 상속관계 맵핑
 	* 객체의 상속 관계를 DB에서 어떻게 매핑할지?
 * @MappedSuperclass
+	* sadlfkasdjlfka
+	* lasdkjfalsd
+			* lasjfalksdjf
+			```
+	  ```
 	* 등록일, 수정일 등 여러 Entity에서 공통으로 사용하는 매핑 정보만 상속받기
 * 복합 키와 식별관계 맵핑
 	* DB 식별자가 하나 이상일 때
@@ -572,8 +577,8 @@ public class Board {
 
 음.. 이거 처음부터 만들어봤어야 하나?
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkxMjc5MTE2MiwxMjkxNTYxOTIsLTQ3Nz
-kzOTIxMiwtMTE0OTkyMTE0NywxODcxMDkzNzEwLDc0MTA0NjIw
-NiwtMTI0MzE2MDYzMiwtMTI3NTYxMDE1NSwtMTQ2MTEzMjU3OC
-wtOTA4MTAzNzc3LDU2NTU0ODgxMF19
+eyJoaXN0b3J5IjpbNTc3MDE0MDc5LC05MTI3OTExNjIsMTI5MT
+U2MTkyLC00Nzc5MzkyMTIsLTExNDk5MjExNDcsMTg3MTA5Mzcx
+MCw3NDEwNDYyMDYsLTEyNDMxNjA2MzIsLTEyNzU2MTAxNTUsLT
+E0NjExMzI1NzgsLTkwODEwMzc3Nyw1NjU1NDg4MTBdfQ==
 -->
