--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -1,8 +1,11 @@
 
 # 최서연 작성
 
+```java
+public void mehtod
 
+```
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0MDQxMzkwMzVdfQ==
+eyJoaXN0b3J5IjpbLTUzNjY1NTU0MSwtMTQwNDEzOTAzNV19
 -->
