JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -2,10 +2,21 @@
 # 최서연 작성
 
 ```java
-public void mehtod
+public void mehtod(String asdf) {
+}
 
 ```
+
+```bash
+#aldkfjalsdjfalskdf
+sleep 10
+tmboot -T
+if [ "$HOME" = "" ];then
+fi
+
+```
+
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUzNjY1NTU0MSwtMTQwNDEzOTAzNV19
+eyJoaXN0b3J5IjpbMTUwNTczODU2OSwtMTQwNDEzOTAzNV19
 -->
