JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -16,7 +16,19 @@ fi
 
 ```
 
+* asdfjladsf `lajsdflkjas` asldkfjadslkfj 
+* 
+
+| wpahr | gkgkgk|
+|--|--|
+| rkskek | alskdfsd
+| adsf|
+|asfasdadsfasdf | asdfsdf
+
+
+
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUwNTczODU2OSwtMTQwNDEzOTAzNV19
+eyJoaXN0b3J5IjpbLTE4NzE2NzU4MzQsLTE0MDQxMzkwMzVdfQ
+==
 -->
