JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -20,15 +20,18 @@ fi
 * 
 
 | wpahr | gkgkgk|
-|--|--|
+|--:|--|
 | rkskek | alskdfsd
 | adsf|
 |asfasdadsfasdf | asdfsdf
 
-
+* [ ] sdfasdf
+* [x] asdfasdf	
+	* [ ] asdfasdf
+		* [x] asdf	
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4NzE2NzU4MzQsLTE0MDQxMzkwMzVdfQ
+eyJoaXN0b3J5IjpbLTE4NTA4Nzk4MDMsLTE0MDQxMzkwMzVdfQ
 ==
 -->
