JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -25,6 +25,9 @@ fi
 | adsf|
 |asfasdadsfasdf | asdfsdf
 
+> asdfaldkfjasldf
+> 
+
 * [ ] sdfasdf
 * [x] asdfasdf	
 	* [ ] asdfasdf
@@ -32,6 +35,5 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4NTA4Nzk4MDMsLTE0MDQxMzkwMzVdfQ
-==
+eyJoaXN0b3J5IjpbMTEyODQwMzYxMywtMTQwNDEzOTAzNV19
 -->
