JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -1,6 +1,11 @@
 
 # 최서연 작성
 
+* 프록시, 즉시로딩, 지연로딩
+
+
+
+
 ```java
 public void mehtod(String asdf) {
 }
@@ -35,5 +40,6 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTEyODQwMzYxMywtMTQwNDEzOTAzNV19
+eyJoaXN0b3J5IjpbMTE5NzA1MjgxOSwxMTI4NDAzNjEzLC0xND
+A0MTM5MDM1XX0=
 -->
