JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -1,7 +1,6 @@
 
-# 최서연 작성
+# 8. 프록시와 연관관계 관리
 
-* 프록시, 즉시로딩, 지연로딩
 
 
 
@@ -40,6 +39,6 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE5NzA1MjgxOSwxMTI4NDAzNjEzLC0xND
-A0MTM5MDM1XX0=
+eyJoaXN0b3J5IjpbLTE5MDE3Nzk1MiwxMTk3MDUyODE5LDExMj
+g0MDM2MTMsLTE0MDQxMzkwMzVdfQ==
 -->
