JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -1,8 +1,8 @@
 
 # 8. 프록시와 연관관계 관리
 
-
-
+# 8.1 프록시
+* 프록시
 
 
 ```java
@@ -39,6 +39,6 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MDE3Nzk1MiwxMTk3MDUyODE5LDExMj
+eyJoaXN0b3J5IjpbMTA5OTc0NjM2MCwxMTk3MDUyODE5LDExMj
 g0MDM2MTMsLTE0MDQxMzkwMzVdfQ==
 -->
