JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -4,7 +4,8 @@
 # 8.1 프록시
 
 * 엔티티를 조회할 때 연관된 엔티티들이 항상 조회되는 것은 아님
-	* JPA는 엔티티가 실제 사용될 때까지 데이터베이스에서 
+* JPA는 엔티티가 실제 사용될 때까지 데이터베이스에서 조회를 지연시키는 방법을 제공 -> 지연 로딩
+	* 
 
 
 ```java
@@ -41,6 +42,6 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNjIxNTcyMDgsLTc5MjA1NDA1NiwxMT
-k3MDUyODE5LDExMjg0MDM2MTMsLTE0MDQxMzkwMzVdfQ==
+eyJoaXN0b3J5IjpbMjA5MzAxODY5NSwtNzkyMDU0MDU2LDExOT
+cwNTI4MTksMTEyODQwMzYxMywtMTQwNDEzOTAzNV19
 -->
