--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -5,7 +5,11 @@
 
 * 엔티티를 조회할 때 연관된 엔티티들이 항상 조회되는 것은 아님
 * JPA는 엔티티가 실제 사용될 때까지 데이터베이스에서 조회를 지연시키는 방법을 제공 -> 지연 로딩
-* 프록시 개실제 엔티티 객체 대신에 데이터베이스 조회를 지연할 수 있는 가짜 객체
+* 프록시 객체
+	* 실제 엔티티 객체 대신에 데이터베이스 조회를 지연할 수 있는 가짜 객체
+
+### 8.1.1 프록시 기초
+
 
 
 ```java
@@ -42,7 +46,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODU4NzA3NjU2LDIwOTMwMTg2OTUsLTc5Mj
-A1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2MTMsLTE0MDQxMzkw
-MzVdfQ==
+eyJoaXN0b3J5IjpbMTIxMDcxMjM4OSwyMDkzMDE4Njk1LC03OT
+IwNTQwNTYsMTE5NzA1MjgxOSwxMTI4NDAzNjEzLC0xNDA0MTM5
+MDM1XX0=
 -->
