JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -10,6 +10,8 @@
 
 ### 8.1.1 프록시 기초
 
+* 엔티티 조회
+	* 
 
 
 ```java
@@ -46,7 +48,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIxMDcxMjM4OSwyMDkzMDE4Njk1LC03OT
+eyJoaXN0b3J5IjpbMTM1Njk5NzgxMywyMDkzMDE4Njk1LC03OT
 IwNTQwNTYsMTE5NzA1MjgxOSwxMTI4NDAzNjEzLC0xNDA0MTM5
 MDM1XX0=
 -->
