JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -10,8 +10,11 @@
 
 ### 8.1.1 프록시 기초
 
-* 엔티티 조회
-	* 
+* EntityManager.getReference() 메소드
+'''java
+Member member = em.getReference(Member.class, "member1");
+'''
+
 
 
 ```java
@@ -48,7 +51,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM1Njk5NzgxMywyMDkzMDE4Njk1LC03OT
-IwNTQwNTYsMTE5NzA1MjgxOSwxMTI4NDAzNjEzLC0xNDA0MTM5
-MDM1XX0=
+eyJoaXN0b3J5IjpbNTM3NzE4NjkwLDEzNTY5OTc4MTMsMjA5Mz
+AxODY5NSwtNzkyMDU0MDU2LDExOTcwNTI4MTksMTEyODQwMzYx
+MywtMTQwNDEzOTAzNV19
 -->
