JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -11,9 +11,10 @@
 ### 8.1.1 프록시 기초
 
 * EntityManager.getReference() 메소드
-'''java
+```java
 Member member = em.getReference(Member.class, "member1");
-'''
+```
+	* 메소드 호출 시, 데이터베이스를 조회하지 않고 실제 엔티티 ㄱ
 
 
 
@@ -51,7 +52,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTM3NzE4NjkwLDEzNTY5OTc4MTMsMjA5Mz
-AxODY5NSwtNzkyMDU0MDU2LDExOTcwNTI4MTksMTEyODQwMzYx
-MywtMTQwNDEzOTAzNV19
+eyJoaXN0b3J5IjpbLTQ4Nzk2NDY5MSwxMzU2OTk3ODEzLDIwOT
+MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
+MTMsLTE0MDQxMzkwMzVdfQ==
 -->
