JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -14,15 +14,13 @@
 ```java
 Member member = em.getReference(Member.class, "member1");
 ```
-	* 메소드 호출 시, 데이터베이스를 조회하지 않고 실제 엔티티 ㄱ
+
+	* 메소드 호출 시, 데이터베이스를 조회하지 않고 실제 엔티티 객체도 생성하지 않는다.
+	* 대신, 프록시 객체 반환
 
 
 
-```java
-public void mehtod(String asdf) {
-}
 
-```
 
 ```bash
 #aldkfjalsdjfalskdf
@@ -52,7 +50,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ4Nzk2NDY5MSwxMzU2OTk3ODEzLDIwOT
-MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
-MTMsLTE0MDQxMzkwMzVdfQ==
+eyJoaXN0b3J5IjpbNTcxOTQwMzI1LDEzNTY5OTc4MTMsMjA5Mz
+AxODY5NSwtNzkyMDU0MDU2LDExOTcwNTI4MTksMTEyODQwMzYx
+MywtMTQwNDEzOTAzNV19
 -->
