--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -8,19 +8,15 @@
 * 프록시 객체
 	* 실제 엔티티 객체 대신에 데이터베이스 조회를 지연할 수 있는 가짜 객체
 
-### 8.1.1 프록시 기초
-
-* EntityManager.getReference() 메소드
+### EntityManager.getReference() 메소드
 ```java
 Member member = em.getReference(Member.class, "member1");
 ```
-	* 메소드 호출 시, 데이터베이스를 조회하지 않고 실제 엔티티 객체도 생성하지 않는다.
-	* 대신, 프록시 객체 반환
-```java
-Member member = em.getReference(Member.class, "member1");
-```
+* 메소드 호출 시, 데이터베이스를 조회하지 않고 실제 엔티티 객체도 생성하지 않는다.
+* 대신, 프록시 객체 반환
 
-* 프록시의 특징
+### 프록시의 특징
+
 
 
 
@@ -53,7 +49,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY5OTE3NDE2OSwxMzU2OTk3ODEzLDIwOT
-MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
-MTMsLTE0MDQxMzkwMzVdfQ==
+eyJoaXN0b3J5IjpbOTU3Njg1NTcwLDEzNTY5OTc4MTMsMjA5Mz
+AxODY5NSwtNzkyMDU0MDU2LDExOTcwNTI4MTksMTEyODQwMzYx
+MywtMTQwNDEzOTAzNV19
 -->
