JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -16,7 +16,10 @@ Member member = em.getReference(Member.class, "member1");
 * 대신, 프록시 객체 반환
 
 ### 프록시의 특징
-
+//
+//
+* 프록시 클래스는 실제 클래스를 상속 받아서 생성
+* 프록시 객체는 실제 객체에 대한 참조 보관
 
 
 
@@ -49,7 +52,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTU3Njg1NTcwLDEzNTY5OTc4MTMsMjA5Mz
+eyJoaXN0b3J5IjpbNjQ4MTExNDk5LDEzNTY5OTc4MTMsMjA5Mz
 AxODY5NSwtNzkyMDU0MDU2LDExOTcwNTI4MTksMTEyODQwMzYx
 MywtMTQwNDEzOTAzNV19
 -->
