--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -16,9 +16,17 @@ Member member = em.getReference(Member.class, "member1");
 * 대신, 프록시 객체 반환
 
 ### 프록시의 특징
-//
-//
+```
+-------
+Entity
+-------
+id
+name
+getId
+```
 * 프록시 클래스는 실제 클래스를 상속 받아서 생성
+```
+```
 * 프록시 객체는 실제 객체에 대한 참조 보관
 
 
@@ -52,7 +60,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjQ4MTExNDk5LDEzNTY5OTc4MTMsMjA5Mz
-AxODY5NSwtNzkyMDU0MDU2LDExOTcwNTI4MTksMTEyODQwMzYx
-MywtMTQwNDEzOTAzNV19
+eyJoaXN0b3J5IjpbLTE1NjQ0MTE5NjcsMTM1Njk5NzgxMywyMD
+kzMDE4Njk1LC03OTIwNTQwNTYsMTE5NzA1MjgxOSwxMTI4NDAz
+NjEzLC0xNDA0MTM5MDM1XX0=
 -->
