JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -17,12 +17,20 @@ Member member = em.getReference(Member.class, "member1");
 
 ### 프록시의 특징
 ```
--------
+---------
 Entity
--------
+---------
 id
 name
-getId
+---------
+getId()
+getName()
+---------
+    ^
+    |
+    |
+    
+
 ```
 * 프록시 클래스는 실제 클래스를 상속 받아서 생성
 ```
@@ -60,7 +68,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NjQ0MTE5NjcsMTM1Njk5NzgxMywyMD
-kzMDE4Njk1LC03OTIwNTQwNTYsMTE5NzA1MjgxOSwxMTI4NDAz
-NjEzLC0xNDA0MTM5MDM1XX0=
+eyJoaXN0b3J5IjpbNzc3MjgzNjgwLDEzNTY5OTc4MTMsMjA5Mz
+AxODY5NSwtNzkyMDU0MDU2LDExOTcwNTI4MTksMTEyODQwMzYx
+MywtMTQwNDEzOTAzNV19
 -->
