JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -17,23 +17,36 @@ Member member = em.getReference(Member.class, "member1");
 
 ### 프록시의 특징
 ```
----------
-Entity
----------
-id
-name
----------
-getId()
-getName()
----------
-    ^
-    |
-    |
-    
+						---------
+						Entity
+						---------
+						id
+						name
+						---------
+						getId()
+						getName()
+						---------
+						    ^
+						    |
+						    |
+						---------
+						Proxy
+						---------
+						---------
+						getId()
+						getName()
+						---------
 
 ```
 * 프록시 클래스는 실제 클래스를 상속 받아서 생성
 ```
+---------
+						Proxy
+						---------
+						---------
+						getId()
+						getName()
+						---------
 ```
 * 프록시 객체는 실제 객체에 대한 참조 보관
 
@@ -68,7 +81,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzc3MjgzNjgwLDEzNTY5OTc4MTMsMjA5Mz
-AxODY5NSwtNzkyMDU0MDU2LDExOTcwNTI4MTksMTEyODQwMzYx
-MywtMTQwNDEzOTAzNV19
+eyJoaXN0b3J5IjpbMTk3NzQwNjg1MCwxMzU2OTk3ODEzLDIwOT
+MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
+MTMsLTE0MDQxMzkwMzVdfQ==
 -->
