--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -40,13 +40,14 @@ Member member = em.getReference(Member.class, "member1");
 ```
 * 프록시 클래스는 실제 클래스를 상속 받아서 생성
 ```
----------
-						Proxy
-						---------
-						---------
-						getId()
-						getName()
-						---------
+-------------					---------
+Proxy							Entity
+-------------
+Entity target
+-------------
+getId()
+getName()
+-------------
 ```
 * 프록시 객체는 실제 객체에 대한 참조 보관
 
@@ -81,7 +82,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk3NzQwNjg1MCwxMzU2OTk3ODEzLDIwOT
-MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
-MTMsLTE0MDQxMzkwMzVdfQ==
+eyJoaXN0b3J5IjpbLTE0NjExOTQyOTAsMTM1Njk5NzgxMywyMD
+kzMDE4Njk1LC03OTIwNTQwNTYsMTE5NzA1MjgxOSwxMTI4NDAz
+NjEzLC0xNDA0MTM5MDM1XX0=
 -->
