JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -42,12 +42,14 @@ Member member = em.getReference(Member.class, "member1");
 ```
 -------------					---------
 Proxy							Entity
--------------
-Entity target
--------------
-getId()
-getName()
--------------
+-------------					---------
+**Entity target**
+	------->	id
+-------------					name
+getId()							---------
+getName()						getId()
+-------------					getName()
+								---------
 ```
 * 프록시 객체는 실제 객체에 대한 참조 보관
 
@@ -82,7 +84,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NjExOTQyOTAsMTM1Njk5NzgxMywyMD
-kzMDE4Njk1LC03OTIwNTQwNTYsMTE5NzA1MjgxOSwxMTI4NDAz
-NjEzLC0xNDA0MTM5MDM1XX0=
+eyJoaXN0b3J5IjpbLTgyNjcxNTAzMiwxMzU2OTk3ODEzLDIwOT
+MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
+MTMsLTE0MDQxMzkwMzVdfQ==
 -->
