JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -43,8 +43,7 @@ Member member = em.getReference(Member.class, "member1");
 -------------					---------
 Proxy							Entity
 -------------					---------
-**Entity target**
-	------->	id
+Entity target	---------->		id
 -------------					name
 getId()							---------
 getName()						getId()
@@ -52,6 +51,8 @@ getName()						getId()
 								---------
 ```
 * 프록시 객체는 실제 객체에 대한 참조 보관
+
+### 프록시 객체으
 
 
 
@@ -84,7 +85,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgyNjcxNTAzMiwxMzU2OTk3ODEzLDIwOT
+eyJoaXN0b3J5IjpbMTI5OTExODQzMiwxMzU2OTk3ODEzLDIwOT
 MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
 MTMsLTE0MDQxMzkwMzVdfQ==
 -->
