JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -52,7 +52,9 @@ getName()						getId()
 ```
 * 프록시 객체는 실제 객체에 대한 참조 보관
 
-### 프록시 객체으
+### 프록시 객체의 초기화
+
+1. 
 
 
 
@@ -85,7 +87,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI5OTExODQzMiwxMzU2OTk3ODEzLDIwOT
-MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
-MTMsLTE0MDQxMzkwMzVdfQ==
+eyJoaXN0b3J5IjpbMzU5ODI3Njg5LDEzNTY5OTc4MTMsMjA5Mz
+AxODY5NSwtNzkyMDU0MDU2LDExOTcwNTI4MTksMTEyODQwMzYx
+MywtMTQwNDEzOTAzNV19
 -->
