JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -52,9 +52,10 @@ getName()						getId()
 ```
 * 프록시 객체는 실제 객체에 대한 참조 보관
 
-### 프록시 객체의 초기화
+### 프록시 객체의 초기화 과정
 
-1. 
+1. member.getName() 호출을 통해 실제 데이터 조회
+2. 프록시 객체는
 
 
 
@@ -87,7 +88,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzU5ODI3Njg5LDEzNTY5OTc4MTMsMjA5Mz
-AxODY5NSwtNzkyMDU0MDU2LDExOTcwNTI4MTksMTEyODQwMzYx
-MywtMTQwNDEzOTAzNV19
+eyJoaXN0b3J5IjpbMTYwNzc0NDc1OSwxMzU2OTk3ODEzLDIwOT
+MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
+MTMsLTE0MDQxMzkwMzVdfQ==
 -->
