--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -54,8 +54,9 @@ getName()						getId()
 
 ### 프록시 객체의 초기화 과정
 
-1. member.getName() 호출을 통해 실제 데이터 조회
-2. 프록시 객체는
+1. member.getName() 호출을 통해 실제 데이터 조회 (member는 proxy 객체)
+2. 프록시 객체는 실제 엔티티가 생성되어 있지 않으면 영속성 컨텍스트에 실제 엔티티 생성을 요청(프록시 객체의 target이 NULL일 시) -> 초기화
+3. 영속성 컨
 
 
 
@@ -88,7 +89,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYwNzc0NDc1OSwxMzU2OTk3ODEzLDIwOT
+eyJoaXN0b3J5IjpbMjEwNjA1MDA4NiwxMzU2OTk3ODEzLDIwOT
 MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
 MTMsLTE0MDQxMzkwMzVdfQ==
 -->
